force-app/main/default/objects/Contact/fields/Can_Submit_Deals__c.field-meta.xml
<CustomField>
    <fullName>Can_Submit_Deals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Submit Deals</label>
    <type>Checkbox</type>
</CustomField>