force-app/main/default/objects/Contact/fields/Can_Submit_MDF__c.field-meta.xml
<CustomField>
    <fullName>Can_Submit_MDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the partner contact can submit MDF requests.</description>
    <label>Can Submit MDF</label>
    <type>Checkbox</type>
</CustomField>