force-app/main/default/objects/Contact/fields/Can_View_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Analytics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can View Analytics</label>
    <type>Checkbox</type>
</CustomField>