force-app/main/default/objects/Contact/fields/Is_Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the contact is associated with a partner user.</description>
    <label>Is Partner User</label>
    <type>Checkbox</type>
</CustomField>