force-app/main/default/objects/Contact/fields/Portal_Role__c.field-meta.xml
<CustomField>
    <fullName>Portal_Role__c</fullName>
    <description>Portal role assigned to the partner contact.</description>
    <label>Portal Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner Admin</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Marketing Rep</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>